gccida/g2/copy_loop_headers
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:589:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:589:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:599:6: error: use of undeclared identifier 'v13'
rtx *v13; // r13 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:601:4: error: expected ';' after expression
rtx v15; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:601:5: error: use of undeclared identifier 'v15'
rtx v15; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:602:4: error: expected ';' after expression
rtx v16; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:602:5: error: use of undeclared identifier 'v16'
rtx v16; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:606:6: error: use of undeclared identifier 'v20'
rtx *v20; // r14 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:608:4: error: expected ';' after expression
rtx v22; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:608:5: error: use of undeclared identifier 'v22'
rtx v22; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:612:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:612:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:614:4: error: expected ';' after expression
rtx v28; // r10 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:614:5: error: use of undeclared identifier 'v28'
rtx v28; // r10 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:619:4: error: expected ';' after expression
rtx v33; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:619:5: error: use of undeclared identifier 'v33'
rtx v33; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:621:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:621:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/jump.c:627:4: error: expected ';' after expression
rtx v41; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_loop_headers/src/obj/jump.o] Error 1
